Working on things, scala is still test code