@@ -1,29 +1,17 @@
-// give the user a nice default project!
-
-lazy val root = (project in file(".")).
-
-  settings(
-    inThisBuild(List(
-      organization := "edu.rose",
-      scalaVersion := "2.11.8"
-    )),
+lazy val root = (project in file("."))
+  .settings(
+    organization in ThisBuild := "edu.rose",
+    scalaVersion in ThisBuild := "2.11.8",
     name := "feature_finder",
-    version := "0.0.1",
-
     sparkVersion := "2.3.0",
-    sparkComponents := Seq(),
-
-    javacOptions ++= Seq("-source", "1.8", "-target", "1.8"),
-    javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled"),
-    scalacOptions ++= Seq("-deprecation", "-unchecked"),
-    parallelExecution in Test := false,
-    fork := true,
 
     coverageHighlighting := true,
 
     libraryDependencies ++= Seq(
+      "org.apache.spark" %% "spark-core" % "2.3.0" % "provided",
       "org.apache.spark" %% "spark-streaming" % "2.3.0" % "provided",
-      "org.apache.spark" %% "spark-sql" % "2.2.0" % "provided",
+      "org.apache.spark" %% "spark-sql" % "2.3.0" % "provided",
+      "org.apache.spark" %% "spark-mllib" % "2.3.0",
 
       "org.scalatest" %% "scalatest" % "3.0.1" % "test",
       "org.scalacheck" %% "scalacheck" % "1.13.4" % "test",
@@ -33,27 +21,8 @@ lazy val root = (project in file(".")).
       "org.scalanlp" %% "breeze-viz" % "0.13.2"
     ),
 
-    // uses compile classpath for the run task, including "provided" jar (cf http://stackoverflow.com/a/21803413/3827)
-    run in Compile := Defaults.runTask(fullClasspath in Compile, mainClass in (Compile, run), runner in (Compile, run)).evaluated,
-
-    scalacOptions ++= Seq("-deprecation", "-unchecked"),
-    pomIncludeRepository := { x => false },
-
-   resolvers ++= Seq(
-      "sonatype-releases" at "https://oss.sonatype.org/content/repositories/releases/",
-      "Typesafe repository" at "http://repo.typesafe.com/typesafe/releases/",
-      "Second Typesafe repo" at "http://repo.typesafe.com/typesafe/maven-releases/",
-      Resolver.sonatypeRepo("public")
-    ),
-
-    pomIncludeRepository := { x => false },
-
-    // publish settings
-    publishTo := {
-      val nexus = "https://oss.sonatype.org/"
-      if (isSnapshot.value)
-        Some("snapshots" at nexus + "content/repositories/snapshots")
-      else
-        Some("releases"  at nexus + "service/local/staging/deploy/maven2")
-    }
+    resolvers += "sonatype-releases" at "https://oss.sonatype.org/content/repositories/releases/",
+    resolvers += "Typesafe repository" at "http://repo.typesafe.com/typesafe/releases/",
+    resolvers += "Second Typesafe repo" at "http://repo.typesafe.com/typesafe/maven-releases/"
+      // Resolver.sonatypeRepo("public")
   )
